--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start",    
+    "serve": "serve -s build"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -25,4 +27,5 @@
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
+
 }
