--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,4 +3,16 @@
       { "source": "/(.*)", "destination": "/" }
     ]
   }
+  {
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "dist" }
+      }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/" }
+    ]
+  }
   
