--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.10.0",
@@ -26,5 +25,4 @@
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
-
 }
